# Computerator

./: CMakeLists.txt  Computerator.project  LICENSE  README.md  compile_flags.txt
Computerator/: CMakeLists.txt  MainApp.cpp  MainApp.hpp  MainFrame.cpp  MainFrame.hpp
Resources/: Form.xrc
Resources/Forms/: MainForm.fbp
